# Plotrix

./: .gitignore  pyproject.toml
plotrix/: cli.py  config.py  dice.py  mcp_client.py  openai_client.py  tui_chat.py  tui_config.py
plotrix/web/: __init__.py  app.py  runtime.py  server.py  util.py
plotrix/web/static/: app.css  app.js  index.html
tests/: test_config.py  test_dice.py  test_mcp_naming.py  test_payload.py  test_tool_cards.py
trpgai/: cli.py  config.py  dice.py  mcp_client.py  openai_client.py  tui_chat.py  tui_config.py
