[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trpgai"
version = "0.1.0"
description = "CLI AI chat tool for TRPG with built-in dice roller and TUI config editor"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
trpgai = "trpgai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trpgai*"]
