[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plotrix"
version = "0.1.0"
description = "Plotrix：面向 TRPG 的终端聊天工具（含骰子与 TUI 配置）"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
# Web UI is optional to keep base install lightweight.
web = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
]

[project.scripts]
plotrix = "plotrix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plotrix*"]
